Aggiornato full responsive

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -59,7 +59,19 @@ h1 {
 }
 
 .value {
-    font-size: 10rem;
+    font-size: clamp(2rem, 9rem, 10rem);
+}
+
+@media (max-width: 768px) {
+    .value {
+        font-size: 4rem; 
+    }
+}
+
+@media (max-width: 480px) {
+    .value {
+        font-size: 1.5rem; 
+    }
 }
 
 .increase, .decrease,.reset {
